--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,19 @@
-#layer{
-    width: 500px;
-    height: 500px;
-    background-color: aqua;
-    border-radius: 20px;
-    box-shadow: 5 10 10;
+section {
+    background-color: #303132;
+    border-radius: 10px;
+    padding: 25px;
+    width: 280px;
+    margin: auto;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.459);
 
+}
+
+body {
+    background: rgb(96, 151, 223);
+    font: normal 15pt Arial;
+}
+
+header {
+    color: white;
+    text-align: center;
 }
