--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ section {
     background-color: #303132;
     border-radius: 10px;
     padding: 25px;
-    width: 280px;
+    width: 500px;
     margin: auto;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.459);
 
@@ -20,8 +20,21 @@ header {
 
 #calc{
     text-align: center;
+    
 }
 #res{
-    background-color: aliceblue;
-    width: 50px;
+    background-color: white;
+    width: 150px;
+    
+    
+    margin: auto;
+    margin-top: 30px;
+}
+
+h3{
+    color: white;
+}
+
+#add{
+    color: white;
 }
