--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,9 @@ section {
     border-radius: 10px;
     padding: 25px;
     width: 500px;
-    margin: auto;
+    margin: 25px auto;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.459);
+
 
 }
 
@@ -13,7 +14,7 @@ body {
     font: normal 15pt Arial;
 }
 
-header {
+h1 {
     color: white;
     text-align: center;
 }
