--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,17 @@ h1 {
     
     margin: auto;
     margin-top: 30px;
+
+}    
+    #resmult{
+        background-color: white;
+        width: 150px;
+        
+        
+        margin: auto;
+        margin-top: 30px;
+    
+ 
 }
 
 h3{
